--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,9 @@ services:
       SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: 'zookeeper:2181'
 
   connect:
-    image: confluentinc/cp-kafka-connect
+    build: 
+      dockerfile: docker/connect/Dockerfile
+      context: .
     hostname: connect
     depends_on:
       - zookeeper
@@ -95,7 +97,6 @@ services:
   mysql:
     restart: always
     image: mysql:latest
-    network_mode: host
     ports:
       - "3306:3306"
     environment:
