--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,39 +58,50 @@ services:
       GROUP_ID: compose-connect-group
       CONFIG_STORAGE_TOPIC: docker-connect-configs
       CONFIG_STORAGE_REPLICATION_FACTOR: 1
-      OFFSET_FLUSH_INTERVAL_MS: 10000
       OFFSET_STORAGE_TOPIC: docker-connect-offsets
       OFFSET_STORAGE_REPLICATION_FACTOR: 1
       STATUS_STORAGE_TOPIC: docker-connect-status
       STATUS_STORAGE_REPLICATION_FACTOR: 1
-      KEY_CONVERTER: io.confluent.connect.avro.AvroConverter
-      KEY_CONVERTER_SCHEMA_REGISTRY_URL: 'http://schema_registry:8081'
-      VALUE_CONVERTER: io.confluent.connect.avro.AvroConverter
-      VALUE_CONVERTER_SCHEMA_REGISTRY_URL: 'http://schema_registry:8081'
       INTERNAL_KEY_CONVERTER: org.apache.kafka.connect.json.JsonConverter
       INTERNAL_VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
       ZOOKEEPER_CONNECT: 'zookeeper:2181'
 
-  control-center:
-    image: confluentinc/cp-enterprise-control-center
-    hostname: control-center
+  rest-proxy:
+    image: confluentinc/cp-kafka-rest:4.0.0
+    ports:
+      - "8082:8082"
+    environment:
+      KAFKA_REST_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_REST_LISTENERS: http://0.0.0.0:8082/
+      KAFKA_REST_SCHEMA_REGISTRY_URL: http://schema_registry:8081/
+      KAFKA_REST_HOST_NAME: rest-proxy
+      KAFKA_REST_BOOTSTRAP_SERVERS: broker:9092
     depends_on:
       - zookeeper
       - broker
       - schema_registry
-      - connect
-    ports:
-      - "9021:9021"
-    environment:
-      CONTROL_CENTER_BOOTSTRAP_SERVERS: 'broker:9092'
-      CONTROL_CENTER_ZOOKEEPER_CONNECT: 'zookeeper:2181'
-      CONTROL_CENTER_CONNECT_CLUSTER: 'connect:8083'
-      CONTROL_CENTER_REPLICATION_FACTOR: 1
-      CONTROL_CENTER_INTERNAL_TOPICS_PARTITIONS: 1
-      CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS: 1
-      CONFLUENT_METRICS_TOPIC_REPLICATION: 1
-      PORT: 9021
 
+  topics-ui: 
+    image: landoop/kafka-topics-ui
+    container_name: topics-ui
+    environment: 
+      PROXY: "true"
+      KAFKA_REST_PROXY_URL: http://rest-proxy:8082
+      SCHEMAREGISTRY_UI_URL: http://schema_registry:8081
+      PORT: 8001
+    ports:
+      - "8001:8001"
+  
+  schema-registry-ui:
+    image: landoop/schema-registry-ui:0.9.3
+    ports:
+      - "8000:8000"
+    environment:
+      SCHEMAREGISTRY_URL: http://schema_registry:8081/
+      PROXY: "true"
+    depends_on:
+      - schema_registry
+    
   mysql:
     restart: always
     image: mysql:latest
@@ -101,6 +112,7 @@ services:
       MYSQL_USER: 'test'
       MYSQL_PASS: 'pass'
     volumes:
+      - ${PWD}/config/mysql.cnf:/etc/mysql/conf.d/mysql.cnf
       - my-datavolume:/var/lib/mysql
 
 volumes:
