--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 version: '2'
 services:
   zookeeper:
-    image: confluentinc/cp-zookeeper
+    image: confluentinc/cp-zookeeper:4.0.1
     hostname: zookeeper
     ports:
       - "2181:2181"
@@ -11,7 +11,7 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
 
   broker:
-    image: confluentinc/cp-enterprise-kafka
+    image: confluentinc/cp-enterprise-kafka:4.0.1
     hostname: broker
     depends_on:
       - zookeeper
@@ -21,25 +21,19 @@ services:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
       KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker:9092'
-      KAFKA_METRIC_REPORTERS: io.confluent.metrics.reporter.ConfluentMetricsReporter
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-      CONFLUENT_METRICS_REPORTER_BOOTSTRAP_SERVERS: broker:9092
-      CONFLUENT_METRICS_REPORTER_ZOOKEEPER_CONNECT: zookeeper:2181
-      CONFLUENT_METRICS_REPORTER_TOPIC_REPLICAS: 1
-      CONFLUENT_METRICS_ENABLE: 'true'
-      CONFLUENT_SUPPORT_CUSTOMER_ID: 'anonymous'
 
-  schema_registry:
-    image: confluentinc/cp-schema-registry
-    hostname: schema_registry
+  schema-registry:
+    image: confluentinc/cp-schema-registry:4.0.1
+    hostname: schema-registry
     depends_on:
       - zookeeper
       - broker
     ports:
       - "8081:8081"
     environment:
-      SCHEMA_REGISTRY_HOST_NAME: schema_registry
+      SCHEMA_REGISTRY_HOST_NAME: schema-registry
       SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: 'zookeeper:2181'
 
   connect:
@@ -48,7 +42,7 @@ services:
     depends_on:
       - zookeeper
       - broker
-      - schema_registry
+      - schema-registry
     ports:
       - "8083:8083"
     environment:
@@ -62,24 +56,28 @@ services:
       OFFSET_STORAGE_REPLICATION_FACTOR: 1
       STATUS_STORAGE_TOPIC: docker-connect-status
       STATUS_STORAGE_REPLICATION_FACTOR: 1
-      INTERNAL_KEY_CONVERTER: org.apache.kafka.connect.json.JsonConverter
-      INTERNAL_VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
+      # KEY_CONVERTER: io.confluent.connect.avro.AvroConverter
+      # VALUE_CONVERTER: io.confluent.connect.avro.AvroConverter
+      # INTERNAL_KEY_CONVERTER: org.apache.kafka.connect.json.JsonConverter
+      # INTERNAL_VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
+      # CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL: http://schema-registry:8081
+      # CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: http://schema-registry:8081
       ZOOKEEPER_CONNECT: 'zookeeper:2181'
 
   rest-proxy:
-    image: confluentinc/cp-kafka-rest:4.0.0
+    image: confluentinc/cp-kafka-rest:4.0.1
     ports:
       - "8082:8082"
     environment:
       KAFKA_REST_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_REST_LISTENERS: http://0.0.0.0:8082/
-      KAFKA_REST_SCHEMA_REGISTRY_URL: http://schema_registry:8081/
+      KAFKA_REST_SCHEMA_REGISTRY_URL: http://schema-registry:8081/
       KAFKA_REST_HOST_NAME: rest-proxy
       KAFKA_REST_BOOTSTRAP_SERVERS: broker:9092
     depends_on:
       - zookeeper
       - broker
-      - schema_registry
+      - schema-registry
 
   topics-ui: 
     image: landoop/kafka-topics-ui
@@ -87,7 +85,7 @@ services:
     environment: 
       PROXY: "true"
       KAFKA_REST_PROXY_URL: http://rest-proxy:8082
-      SCHEMAREGISTRY_UI_URL: http://schema_registry:8081
+      SCHEMAREGISTRY_UI_URL: http://schema-registry:8081
       PORT: 8001
     ports:
       - "8001:8001"
@@ -97,11 +95,11 @@ services:
     ports:
       - "8000:8000"
     environment:
-      SCHEMAREGISTRY_URL: http://schema_registry:8081/
+      SCHEMAREGISTRY_URL: http://schema-registry:8081/
       PROXY: "true"
     depends_on:
-      - schema_registry
-    
+      - schema-registry
+
   mysql:
     restart: always
     image: mysql:latest
